--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -123,10 +123,15 @@ module Types_mod
    public :: SP
 
    integer, parameter :: SP = REAL32
+   ! put other kind parameters here from Listing|~\ref{kind:params}|
 contains
 
 end module Types_mod
-\end{lstlisting} 
+\end{lstlisting}
+\item Compile the module using the command in the \texttt{src/} directory:
+\begin{Verbatim}[commandchars=\\\{\}]
+nagfor -c Types_mod.f90
+\end{Verbatim}    
 \item Use the NAG compiler unifying precision feature to change \texttt{double precision} to \texttt{real(kind=DP)}
   using the command below. The output is a temporary file shown in italics which is then moved to the original file -
   remember to close the main source file \texttt{fd1d\_heat\_explicit.f90} in any editor:
